test/expected/include-unquoted.out
cdecl> include "|"
               ^
9: error: |: contains unquoted shell characters
